--- a/mypapers.bib
+++ b/mypapers.bib
@@ -1,3 +1,128 @@
+@article{Ma23OOPSLA,
+  author    = {Cong Ma and Dinghao Wu and Gang Tan and Mahmut Kandemir and Danfeng Zhang},
+  title     = {Quantifying and Mitigating Cache Side Channel Leakage with Differential Set},
+  journal   = {Proceedings of the ACM on Programming Languages},
+  number    = {{OOPSLA}},
+  pages     = {To appear},
+  year      = {2023},
+  keywords = {Software Security -> Side Channel Mitigation}
+}
+
+@article{ZhangMT23IPG,
+  author = "Jialun Zhang and Greg Morrisett and Gang Tan",
+  title = "Interval Parsing Grammars for File Format Parsing",
+  journal   = {Proceedings of the ACM on Programming Languages},
+  volume    = {7},
+  number    = {{PLDI}},
+  pages     = {1073--1095},
+  year      = {2023},
+  url_Paper = {https://dl.acm.org/doi/10.1145/3591264},
+  keywords  = {Formal Methods -> Parser Assurance}
+}
+
+@InProceedings{Wu23Libscan,
+  author = {Yafei Wu and Cong Sun and Dongrui Zeng and Gang Tan and Siqi Ma and Peicheng Wang},
+  title = {{LibScan}: Towards More Precise {Third-Party} Library Identification for {Android} Applications},
+  booktitle = {32nd USENIX Security Symposium (USENIX Security)},
+  year = {2023},
+  pages = {3385--3402},
+  url_Paper = {https://www.usenix.org/conference/usenixsecurity23/presentation/wu-yafei},
+  keywords = {Software Security -> Android Security}
+}
+
+@INPROCEEDINGS{Tian23BAR,
+author={Zhiyou Tian and Cong Sun and Dongrui Zeng and Gang Tan},
+title={podft: On Accelerating Dynamic Taint Analysis with Precise Path Optimization},
+booktitle= {Workshop on Binary Analysis Research (BAR)},
+year={2023},
+url_Paper = {https://www.ndss-symposium.org/ndss-paper/auto-draft-394/},
+keywords  = {ftware Security -> Binary Code Analysis}
+}
+
+
+@article{Sun23CryptoEval,
+  author       = {Cong Sun and
+                  Xinpeng Xu and
+                  Yafei Wu and
+                  Dongrui Zeng and
+                  Gang Tan and
+                  Siqi Ma and
+                  Peicheng Wang},
+  title        = {{CryptoEval}: Evaluating the risk of cryptographic misuses in {Android}
+                  apps with data-flow analysis},
+  journal      = {{IET} Information Security},
+  volume       = {17},
+  number       = {4},
+  pages        = {582--597},
+  year         = {2023},
+  url_Paper    = {https://ietresearch.onlinelibrary.wiley.com/doi/full/10.1049/ise2.12117},
+  keywords = {Software Security -> Android Security}
+}
+
+@article{Liang23AbsLearn,
+  author       = {Ke Liang and
+                  Jim Tan and
+                  Dongrui Zeng and
+                  Yongzhe Huang and
+                  Xiaolei Huang and
+                  Gang Tan},
+  title        = {{ABSLearn}: a {GNN}-based framework for aliasing and buffer-size information
+                  retrieval},
+  journal      = {Pattern Analysis and Application},
+  volume       = {26},
+  number       = {3},
+  pages        = {1171--1189},
+  year         = {2023},
+  url_Paper    = {https://link.springer.com/article/10.1007/s10044-023-01142-2}
+}
+
+@article{JiaKT23TOPLAS,
+  author    = {Xiaodong Jia and
+               Ashish Kumar and
+               Gang Tan},
+  title     = {A derivative-based parser generator for visibly pushdown grammars},
+  journal   = {ACM Transactions on Programming Languages and Systems ({TOPLAS})},
+  volume    = {45},
+  issue     = {2},
+  number    = {9},
+  pages     = {1--68},
+  year      = {2023},
+  url_Paper = {https://dl.acm.org/doi/10.1145/3591472},
+  keywords  = {Formal Methods -> Parser Assurance}
+}
+
+@INPROCEEDINGS{Kumar23DISV,
+author={Ashish Kumar and Bill Harris and Gang Tan},
+title={{DISV}: Domain Independent Semantic Validation of Data Files},
+booktitle= {9th Workshop on Language-Theoretic Security ({LangSec})},
+year={2023},
+award     = {Best paper award},
+url_Paper = {http://www.cse.psu.edu/~gxt29/papers/Kumar_LangSec23_DISV.pdf},
+keywords = {Formal Methods -> Parser Assurance}
+}
+
+@InProceedings{Monjezi23ICSE,
+    title={Information-Theoretic Testing and Debugging of Fairness Defects in Deep Neural Networks},
+    author={Verya Monjezi and Ashutosh Trivedi and Gang Tan and Saeid Tizpaz-Niari},
+    booktitle = {45th International Conference on Software Engineering ({ICSE})},
+    pages = {1571--1582},
+    year={2023},
+    url_Paper = {https://tizpaz.github.io/icse2023-paper892.pdf},
+    keywords  = {ML Security}
+}
+
+
+@article{Sun23TDSC,
+  author    = {Cong Sun and Yuwan Ma and Dongrui Zeng and Gang Tan and Siqi Ma and  Yafei Wu},
+  title     = {{muDep}: Mutation-based Dependency Generation for Precise Taint Analysis on {Android} Native Code},
+  journal   = {IEEE Transactions on Dependable and Secure Computing},
+  volumn = {20},
+  pages     = {1461--1475},
+  year      = {2023},
+  url_Paper = {https://www.computer.org/csdl/journal/tq/2023/02/09726808/1BrwwIPYKyY},
+  keywords = {Software Security -> Android Security}
+}
+
 @inproceedings{Pauley22CNS,
   author    = {Eric Pauley and
                Gang Tan and
@@ -52,16 +177,6 @@ url_Paper = {http://www.cse.psu.edu/~gxt29/papers/Sarracino_LangSec22.pdf},
 keywords = {Formal Methods -> Parser Assurance}
 }
 
-@InProceedings{Monjezi23ICSE,
-    title={Information-Theoretic Testing and Debugging of Fairness Defects in Deep Neural Networks},
-    author={Verya Monjezi and Ashutosh Trivedi and Gang Tan and Saeid Tizpaz-Niari},
-    booktitle = {45th International Conference on Software Engineering ({ICSE})},
-    pages = {To appear},
-    year={2023},
-    url_Paper = {https://tizpaz.github.io/icse2023-paper892.pdf},
-    keywords  = {ML Security}
-}
-
 @article{Norris22IotRepair,
   author    = {Michael Norris and
                Z. Berkay Celik and
@@ -88,15 +203,6 @@ keywords = {Formal Methods -> Parser Assurance}
     year={2022},
     url_Paper = {http://www.cse.psu.edu/~gxt29/papers/ksplit_osdi22.pdf},
     keywords = {Software Security -> Privilege Separation}
-}
-
-@article{Sun22TDSC,
-  author    = {Cong Sun and Yuwan Ma and Dongrui Zeng and Gang Tan and Siqi Ma and  Yafei Wu},
-  title     = {{muDep}: Mutation-based Dependency Generation for Precise Taint Analysis on Android Native Code},
-  journal   = {IEEE Transactions on Dependable and Secure Computing},
-  pages     = {To appear},
-  year      = {2022},
-  keywords = {Software Security -> Android Security}
 }
 
 @inproceedings{Wang22ROSSF,
@@ -169,7 +275,7 @@ keywords = {Formal Methods -> Parser Assurance}
   author    = {Xiaodong Jia and
                Ashish Kumar and
                Gang Tan},
-  title     = {A derivative-based parser generator for visibly Pushdown grammars},
+  title     = {A derivative-based parser generator for visibly pushdown grammars},
   journal   = {Proceedings of the ACM on Programming Languages},
   volume    = {5},
   number    = {{OOPSLA}},
@@ -381,6 +487,7 @@ keywords = {Formal Methods -> Parser Assurance}
   journal   = {16th ACM International Conference on Virtual Execution Environments (VEE)},
   pages     = {157--171},
   year      = {2020},
+  award     = {Best paper award},
   url_Paper = {https://doi.org/10.1145/3381052.3381328},
   keywords = {Software Security -> Privilege Separation}
 }
