--- a/mypapers.bib
+++ b/mypapers.bib
@@ -1,11 +1,91 @@
+@ARTICLE{Xue24TDSC,
+  author={Rao, Xue and Sun, Cong and Zeng, Dongrui and Huang, Yongzhe and Tan, Gang},
+  journal={IEEE Transactions on Dependable and Secure Computing}, 
+  title={Sliver: A Scalable Slicing-Based Verification for Information Flow Security}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={1-17},
+  url_Paper = {https://ieeexplore.ieee.org/abstract/document/10535734},
+  keywords = {Software Security -> Android Security}
+}
+
+@ARTICLE{Huang24MSafety,
+author={Kaiming Huang and Mathias Payer and Zhiyun Qian and Jack Sampson and Gang Tan and Trent Jaeger},
+journal={IEEE Security and Privacy}, 
+title={Comprehensive Memory Safety Validation: An Alternative Approach to Memory Safety},
+volume={},
+number={},
+pages={To appear},
+month={Apr},
+year={2024},
+url_Paper = {https://ieeexplore.ieee.org/abstract/document/10491404},
+keywords={Systems Security}
+}
+
+@article{JiaT24VStar,
+  author = "Xiaodong Jia and Gang Tan",
+  title = "{V-Star}: Learning Visibly Pushdown Grammars from Program Inputs",
+  journal   = {Proceedings of the ACM on Programming Languages},
+  number    = {{PLDI}},
+  pages     = {To appear},
+  year      = {2024},
+  url_Paper = {https://arxiv.org/abs/2404.04201},
+  keywords = {Programming Languages},
+  award     = {Distinguished paper award}
+}
+
+@article{Fan23TDSC,
+  author    = {Yongkai Fan and Kaile Ma  and Linlin Zhang and Xia Lei and Guangquan Xu and Gang Tan},
+  title     = {{ValidCNN}: A large-scale {CNN} predictive integrity verification scheme based on {zk-SNARK}},
+  journal   = {IEEE Transactions on Dependable and Secure Computing},
+  volume={},
+  number={},
+  pages     = {To appear},
+  year      = {2024},
+  url_Paper = {https://ieeexplore.ieee.org/abstract/document/10453996},
+  keywords = {ML Security}
+}
+
+@inproceedings{Miao23Micro,
+  author       = {Yuanqing Miao and
+                  Mahmut Taylan Kandemir and
+                  Danfeng Zhang and
+                  Yingtian Zhang and
+                  Gang Tan and
+                  Dinghao Wu},
+  title        = {Hardware Support for Constant-Time Programming},
+  booktitle    = {56th Annual {IEEE/ACM} International Symposium on Microarchitecture (MICRO)},
+  pages        = {856--870},
+  year         = {2023},
+  url_Paper    = {https://dl.acm.org/doi/10.1145/3613424.3623796},
+  keywords = {Software Security -> Side Channel Mitigation}
+}
+
 @article{Ma23OOPSLA,
   author    = {Cong Ma and Dinghao Wu and Gang Tan and Mahmut Kandemir and Danfeng Zhang},
   title     = {Quantifying and Mitigating Cache Side Channel Leakage with Differential Set},
   journal   = {Proceedings of the ACM on Programming Languages},
   number    = {{OOPSLA}},
-  pages     = {To appear},
+  pages     = {1470--1498},
   year      = {2023},
+  url_Paper = {https://dl.acm.org/doi/pdf/10.1145/3622850},
   keywords = {Software Security -> Side Channel Mitigation}
+}
+
+@inproceedings{Burtsev23HotOS,
+  author       = {Anton Burtsev and
+                  Vikram Narayanan and
+                  Yongzhe Huang and
+                  Kaiming Huang and
+                  Gang Tan and
+                  Trent Jaeger},
+  title        = {Evolving Operating System Kernels Towards Secure Kernel-Driver Interfaces},
+  booktitle    = {19th Workshop on Hot Topics in Operating Systems (HOTOS)},
+  pages        = {166--173},
+  year         = {2023},
+  url_Paper = {https://dl.acm.org/doi/pdf/10.1145/3593856.3595914},
+  keywords = {Software Security -> Privilege Separation}
 }
 
 @article{ZhangMT23IPG,
@@ -16,7 +96,7 @@
   number    = {{PLDI}},
   pages     = {1073--1095},
   year      = {2023},
-  url_Paper = {https://dl.acm.org/doi/10.1145/3591264},
+  url_Paper = {https://dl.acm.org/doi/pdf/10.1145/3591264},
   keywords  = {Formal Methods -> Parser Assurance}
 }
 
@@ -36,7 +116,7 @@ title={podft: On Accelerating Dynamic Taint Analysis with Precise Path Optimizat
 booktitle= {Workshop on Binary Analysis Research (BAR)},
 year={2023},
 url_Paper = {https://www.ndss-symposium.org/ndss-paper/auto-draft-394/},
-keywords  = {ftware Security -> Binary Code Analysis}
+keywords  = {Software Security -> Binary Code Analysis}
 }
 
 
